--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -17,6 +17,8 @@
 <body ng-app="FullstackGeneratedApp">
     <navbar></navbar>
     <div id="main" ui-view></div>
+
+    <rec-engine></rec-engine>
 </body>
 </html>
 
